🔨 refactor(packages): #247 moved tsconfig to package

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,11 +1,13 @@
 {
-  "extends": "../../.config/tsconfig/base.json",
+  "extends": "@templ/tsconfig/base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
+    "baseUrl": ".",
     "types": [
       "vitest/importMeta"
-    ]
+    ],
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts",
