--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -1,4 +1,8 @@
 {
-  "extends": "../../.config/tsconfig/base.json",
-  "include": ["src/**/*.ts", "*.config.ts"]
+  "extends": "@templ/tsconfig/base.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist"
+  },
+  "include": ["src/**/*.ts", "*.config.ts", "*.d.ts"]
 }
