--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,12 +16,12 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "exports": {
-    "types": "types.d.ts",
-    "import": "./src/index.js",
-    "require": "./src/index.js"
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
   },
-  "main": "src/index.js",
-  "types": "types.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "*.d.ts",
     "src"
@@ -37,9 +37,10 @@
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "@vitest/coverage-v8": "^1.3.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
     "vitest": "^1.3.0"
   }
