--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
     "autoprefixer": "^10.4.17",
