--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "../../.config/tsconfig/next.json",
+  "extends": "@templ/tsconfig/next.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "outDir": "dist"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", ".next"]
