--- a/generator/package.json
+++ b/generator/package.json
@@ -40,6 +40,7 @@
     "slash": "^5.1.0"
   },
   "devDependencies": {
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "tsx": "^4.7.1"
   }
