--- a/generator/templates/basic-js/package.json
+++ b/generator/templates/basic-js/package.json
@@ -20,7 +20,7 @@
     "import": "./src/index.js",
     "require": "./src/index.js"
   },
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "types": "types.d.ts",
   "files": [
     "*.d.ts",
