--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,13 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "*.d.ts",
     "dist"
@@ -30,7 +37,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@hono/node-server": "^1.8.0",
+    "@hono/node-server": "^1.8.1",
     "@hono/zod-openapi": "^0.9.6",
     "@scalar/hono-api-reference": "^0.3.51",
     "consola": "^3.2.3",
@@ -38,11 +45,12 @@
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
     "@types/autocannon": "^7.12.5",
     "@types/node": "^20.11.19",
     "@vitest/coverage-v8": "^1.3.0",
     "autocannon": "^7.15.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
     "vitest": "^1.3.0"
   },
