--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,8 +20,8 @@
     "import": "./dist/index.js",
     "require": "./dist/index.js"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "bin": {
     "templ-cli": "templ.mjs"
   },
@@ -45,8 +45,9 @@
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "tsx": "^4.7.1"
   },
   "size-limit": "400 KB"
