--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,8 +19,8 @@
     "import": "./dist/index.js",
     "require": "./dist/index.js"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "*.d.ts",
     "dist"
@@ -36,9 +36,10 @@
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "@vitest/coverage-v8": "^1.3.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
     "vitest": "^1.3.0"
   },
