--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -116,11 +116,12 @@
     "@storybook/react": "^7.6.16",
     "@storybook/react-vite": "^7.6.16",
     "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
     "@vitest/coverage-v8": "^1.3.0",
     "date-fns": "^3.3.1",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.325.0",
     "storybook": "^7.6.16",
