--- a/plugins/esbuild-plugin-templ/package.json
+++ b/plugins/esbuild-plugin-templ/package.json
@@ -20,8 +20,8 @@
     "import": "./dist/index.js",
     "require": "./dist/index.js"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "*.d.ts",
     "dist"
@@ -37,11 +37,12 @@
     "@lukeed/ms": "^2.0.2",
     "consola": "^3.2.3",
     "cpy": "^11.0.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "tsx": "^4.7.1"
   }
