--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,4 +1,8 @@
 {
-  "extends": "../.config/tsconfig/base.json",
+  "extends": "@templ/tsconfig/base.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist"
+  },
   "include": ["src/**/*.ts"]
 }
