--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,9 +35,10 @@
     "npm": ">=8"
   },
   "scripts": {
+    "postbuild": "pnpm link . && pnpm templ-cli -v",
     "build": "tsx esbuild.config.ts",
     "dev": "tsx ./src/index",
-    "postbuild": "pnpm link . && pnpm templ-cli -v"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "consola": "^3.2.3",
@@ -48,7 +49,8 @@
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "esbuild": "^0.20.1",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "size-limit": "400 KB"
 }
