--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "build": "tsx esbuild.config.ts",
     "dev": "tsx esbuild.config.ts --watch",
-    "test": "vitest run"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "salteen": "^1.0.0",
@@ -47,6 +48,7 @@
     "@vitest/coverage-v8": "^1.3.0",
     "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0"
   },
   "size-limit": "1.4 KB"
