--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,7 +34,8 @@
     "build": "tsx esbuild.config.ts",
     "dev": "tsx ./src/index",
     "api:load": "tsx ./test/api.load.ts",
-    "test": "vitest run"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/node-server": "^1.8.1",
@@ -52,6 +53,7 @@
     "autocannon": "^7.15.0",
     "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0"
   },
   "size-limit": "1024 B"
