--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "build": "tsx esbuild.config.ts",
     "dev": "tsx esbuild.config.ts --watch",
-    "test": "vitest run"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
@@ -41,6 +42,7 @@
     "@vitest/coverage-v8": "^1.3.0",
     "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0"
   },
   "size-limit": "100 B"
