--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,7 +56,8 @@
     "dev": "tsx esbuild.config.ts --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -92,7 +93,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "embla-carousel-react": "8.0.0-rc22",
+    "embla-carousel-react": "8.0.0-rc23",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
@@ -126,6 +127,7 @@
     "lucide-react": "0.333.0",
     "storybook": "^7.6.16",
     "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0",
     "zod": "^3.22.4"
   },
