--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
   },
   "scripts": {
     "postinstall": "nr deps:update",
-    "all": "nr deps:update && nr build && nr lint && nr test",
+    "all": "ni && nr deps:update && nr build && nr lint && nr test",
     "build": "nr -C scripts clean && turbo run build && nr -C scripts build:check",
-    "commit": "ni && nr all && better-commits",
     "deps:update": "taze -r -w -i -f -l",
     "lint": "eslint . --fix && knip -c .config/knip.config.ts && nr -C scripts automd && nr -r typecheck",
     "release": "changeset version && npm publish && git push --follow-tags",
@@ -40,7 +39,6 @@
     "@antfu/eslint-config": "2.6.4",
     "@antfu/ni": "^0.21.12",
     "@changesets/cli": "^2.27.1",
-    "better-commits": "^1.12.0",
     "eslint": "^8.56.0",
     "knip": "^5.0.1",
     "pnpm": "^8.15.3",
