--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "yarn": ">=3"
   },
   "scripts": {
-    "postinstall": "nr deps:update",
-    "all": "ni && nr deps:update && nr build && nr lint && nr test",
-    "build": "nr -r clean && turbo run build && nr -r build:check && nr -r typecheck",
-    "deps:update": "taze -r -w -i -f -l",
-    "lint": "eslint . --fix && knip -c .config/knip.config.ts && nr -r automd",
+    "prepare": "husky",
+    "postinstall": "taze -r -w -i -f -l",
+    "postbuild": "nr -C scripts build:check && nr -r typecheck && nr knip",
+    "all": "ni && nr build && nr lint && nr test",
+    "build": "nr -C scripts clean && turbo run build",
+    "lint": "eslint . --fix && nr -C scripts automd",
+    "knip": "knip -c .config/knip.config.ts",
     "release": "changeset version && npm publish && git push --follow-tags",
     "test": "turbo run test"
   },
@@ -38,14 +40,10 @@
     "@antfu/ni": "^0.21.12",
     "@changesets/cli": "^2.27.1",
     "eslint": "^8.56.0",
+    "husky": "^9.0.11",
     "knip": "^5.0.1",
     "pnpm": "^8.15.3",
-    "simple-git-hooks": "^2.9.0",
     "taze": "^0.13.3",
     "turbo": "^1.12.4"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "ni && nr deps:update && nr build && nr lint && nr test",
-    "preserveUnused": true
   }
 }
