--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,26 +50,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
-      - name: Install
-        run: pnpm install --no-frozen-lockfile
 
       - name: Build
         run: |
-          pnpm run -C scripts ci:env-copy
-          pnpm run build
-          pnpm run -C scripts ci:env-delete
-          pnpm run -C scripts build:check
+          nr -r ci:env-copy
+          nr build
+          nr -r ci:env-delete
+          nr -r build:check
 
   lint:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
-      - name: Install
-        run: pnpm install --no-frozen-lockfile
 
       - name: Lint
-        run: pnpm run lint
+        run: nr lint
 
   test:
     runs-on: ${{ matrix.os }}
@@ -87,7 +84,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
 
       - name: Test
-        run: pnpm run test
+        run: nr test
 
   action-timeline:
     needs: [build, lint, pr, test, trivy_scan, triage]
