--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,7 +56,8 @@
     "dev": "tsx esbuild.config.ts --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -87,12 +88,12 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@vercel/analytics": "^1.2.0",
+    "@vercel/analytics": "^1.2.1",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "embla-carousel-react": "8.0.0-rc22",
+    "embla-carousel-react": "8.0.0-rc23",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
@@ -118,7 +119,7 @@
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.2.57",
     "@vitest/coverage-v8": "^1.3.0",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
@@ -126,6 +127,7 @@
     "lucide-react": "0.333.0",
     "storybook": "^7.6.16",
     "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0",
     "zod": "^3.22.4"
   },
