--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -4,5 +4,5 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "*.config.ts", "*.d.ts"]
+  "include": ["src/**/*.ts", "*.d.ts", "vitest.config.js"]
 }
