--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -37,24 +37,22 @@
   },
   "dependencies": {
     "@lukeed/ms": "^2.0.2",
-    "c12": "^1.8.0",
+    "c12": "^1.9.0",
     "consola": "^3.2.3",
     "cpy": "^11.0.0",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "pkg-types": "^1.0.3",
-    "scule": "^1.3.0",
     "std-env": "^3.7.0",
-    "untyped": "^1.4.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.19",
-    "@vitest/coverage-v8": "^1.3.0",
+    "@types/node": "^20.11.20",
     "esbuild": "^0.20.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.0"
+    "vitest": "^1.3.1"
   },
-  "size-limit": "6.5 KB"
+  "size-limit": "7 KB"
 }
