--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["**/.env"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
@@ -21,5 +22,6 @@
       "outputs": ["coverage/**"],
       "inputs": ["test/**/*.test.{ts,tsx}"]
     }
-  }
+  },
+  "globalEnv": []
 }
