--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.15.3",
+  "packageManager": "pnpm@8.15.4",
   "description": "UI",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/ui#readme",
@@ -88,47 +88,46 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@vercel/analytics": "^1.2.1",
+    "@vercel/analytics": "^1.2.2",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "embla-carousel-react": "8.0.0-rc23",
+    "embla-carousel-react": "8.0.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-hook-form": "^7.50.1",
-    "sonner": "^1.4.0",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.1.9",
+    "@chromatic-com/storybook": "^1.1.10",
     "@hookform/resolvers": "^3.3.4",
-    "@storybook/addon-actions": "^7.6.16",
-    "@storybook/addon-essentials": "^7.6.16",
-    "@storybook/addon-interactions": "^7.6.16",
-    "@storybook/addon-links": "^7.6.16",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/addon-themes": "^7.6.16",
-    "@storybook/react": "^7.6.16",
-    "@storybook/react-vite": "^7.6.16",
+    "@storybook/addon-themes": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@vitest/coverage-v8": "^1.3.0",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.333.0",
-    "storybook": "^7.6.16",
+    "storybook": "^7.6.17",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.0",
+    "vitest": "^1.3.1",
     "zod": "^3.22.4"
   },
   "size-limit": "60 KB"
