--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "scripts": {
     "prepare": "husky",
     "all": "ni && nr deps:update && nr build && nr lint && nr test",
-    "build": "nr -C scripts clean && turbo run build && knip && nr -C scripts build:check && nr -r typecheck",
+    "build": "nr clean && turbo run build && knip && nr -C scripts build:check && nr -r typecheck",
+    "clean": "nr -C scripts clean",
+    "coverage": "vitest run --coverage",
     "deps:update": "taze -r -w -i -f -l",
     "lint": "eslint . --fix && nr -C scripts automd",
     "release": "changeset version && npm publish && git push --follow-tags",
@@ -37,11 +39,13 @@
     "@antfu/eslint-config": "2.6.4",
     "@antfu/ni": "^0.21.12",
     "@changesets/cli": "^2.27.1",
+    "@vitest/coverage-v8": "^1.3.1",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "knip": "^5.0.2",
     "pnpm": "^8.15.4",
     "taze": "^0.13.3",
-    "turbo": "^1.12.4"
+    "turbo": "^1.12.4",
+    "vitest": "^1.3.1"
   }
 }
