--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -106,28 +106,33 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.1.12",
     "@hookform/resolvers": "^3.3.4",
+    "@storybook/addon-a11y": "^7.6.17",
     "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-docs": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/addon-themes": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
+    "@storybook/testing-library": "^0.2.2",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.20",
+    "@testing-library/react": "^14.2.1",
+    "@types/node": "^20.11.21",
     "@types/react": "^18.2.60",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
-    "lucide-react": "0.340.0",
+    "happy-dom": "^13.6.2",
+    "lucide-react": "^0.340.0",
     "storybook": "^7.6.17",
+    "storybook-addon-rtl": "^1.0.0",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1",
+    "vitest-axe": "^0.1.0",
     "zod": "^3.22.4"
   },
   "size-limit": "60 KB"
