--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
 
-  pr:
+  pr_title_check:
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
     steps:
@@ -51,22 +51,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
+      - name: Build Setup
+        run: nr -r ci:env-copy
+
       - name: Build
-        run: |
-          nr -r ci:env-copy
-          nr build
-          nr -r ci:env-delete
-          nr -r build:check
+        run: nr build
 
-  coverage:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
-
-      - name: Coverage
-        run: nr coverage
+      - name: After build - check
+        run: nr check
+        
+      - name: Cleanup
+        run: nr -r ci:env-delete
 
   lint:
     runs-on: ubuntu-latest
@@ -96,8 +91,5 @@ jobs:
       - name: Test
         run: nr test
 
-  action-timeline:
-    needs: [build, lint, pr, test, trivy_scan, triage]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: Kesin11/actions-timeline@v1
+      - name: Coverage
+        run: nr coverage
