--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "prepare": "husky",
     "all": "ni && nr deps:update && nr clean && nr build && nr lint && nr test",
     "build": "turbo run build",
+    "build:check": "knip --production && nr -C scripts build:check",
     "clean": "nr -C scripts clean",
     "deps:update": "taze -r -w -i -f -l",
-    "lint": "eslint . --fix && nr -C scripts automd && knip && nr typecheck",
+    "lint": "eslint . --fix && nr -C scripts automd && nr typecheck",
     "release": "changeset version && npm publish && git push --follow-tags",
     "test": "turbo run test",
     "test:coverage": "vitest run --coverage",
