--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,12 +52,16 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsx esbuild.config.ts",
-    "dev": "tsx esbuild.config.ts --watch",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "vitest run",
-    "typecheck": "tsc --noEmit"
+    "build": "nr tailwind && tsx esbuild.config.ts",
+    "tailwind": "tailwindcss -i styles/tailwind.css -o styles/global.css --minify",
+    "dev": "nr tailwind && tsx esbuild.config.ts --watch",
+    "storybook": "concurrently 'pnpm:watch:*' -c 'red,green' ",
+    "build-storybook": "nr tailwind && storybook build",
+    "test": "vitest run && nr test-storybook",
+    "test-storybook": "test-storybook",
+    "typecheck": "tsc --noEmit",
+    "watch:tailwind": "nr tailwind --watch",
+    "watch:storybook": "nr tailwind && storybook dev -p 6006"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -107,27 +111,39 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.1.12",
+    "@geometricpanda/storybook-addon-badges": "^2.0.2",
     "@hookform/resolvers": "^3.3.4",
     "@storybook/addon-actions": "^7.6.17",
     "@storybook/addon-controls": "^7.6.17",
+    "@storybook/addon-docs": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-highlight": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-storysource": "^7.6.17",
     "@storybook/addon-themes": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/preview-api": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
+    "@storybook/theming": "^7.6.17",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.60",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.340.0",
+    "playwright": "^1.42.0",
     "storybook": "^7.6.17",
+    "storybook-addon-performance": "^0.17.3",
+    "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook-dark-mode": "^3.0.3",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
+    "vite": "^5.1.4",
     "vitest": "^1.3.1",
     "zod": "^3.22.4"
   },
