chore: stories docs and couple of other modification

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,16 +52,12 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "nr tailwind && tsx esbuild.config.ts",
-    "tailwind": "tailwindcss -i styles/tailwind.css -o styles/global.css --minify",
-    "dev": "nr tailwind && tsx esbuild.config.ts --watch",
-    "storybook": "concurrently 'pnpm:watch:*' -c 'red,green' ",
-    "build-storybook": "nr tailwind && storybook build",
-    "test": "vitest run && nr test-storybook",
-    "test-storybook": "test-storybook",
-    "typecheck": "tsc --noEmit",
-    "watch:tailwind": "nr tailwind --watch",
-    "watch:storybook": "nr tailwind && storybook dev -p 6006"
+    "build": "tsx esbuild.config.ts",
+    "build-storybook": "storybook build",
+    "dev": "tsx esbuild.config.ts --watch",
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest run && test-storybook",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -93,24 +89,23 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.2.2",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-react": "8.0.0",
-    "next": "^14.1.0",
+    "next": "^14.1.1",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-hook-form": "^7.50.1",
-    "sonner": "^1.4.2",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.1.12",
     "@geometricpanda/storybook-addon-badges": "^2.0.2",
     "@hookform/resolvers": "^3.3.4",
     "@storybook/addon-actions": "^7.6.17",
@@ -119,18 +114,18 @@
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-highlight": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-storysource": "^7.6.17",
-    "@storybook/addon-themes": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
+    "@storybook/manager-api": "^7.6.17",
     "@storybook/preview-api": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
     "@storybook/theming": "^7.6.17",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.60",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
     "concurrently": "^8.2.2",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
