fix: knip issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,8 @@ jobs:
       - name: Test
         run: nr test
       
-      - name: Storybook test
-        run: nr test-storybook:ci
+      # - name: Storybook test
+      #   run: nr test-storybook:ci
 
       - name: Coverage
         run: nr test:coverage
