--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,16 +52,15 @@
     "npm": ">=8"
   },
   "scripts": {
-    "postinstall": "pnpm exec playwright install",
     "build": "tsx esbuild.config.ts",
-    "build-storybook": "storybook build",
+    "build:storybook": "storybook build -o dist/storybook",
     "dev": "tsx esbuild.config.ts --watch",
     "storybook": "storybook dev -p 6006",
     "test": "vitest run",
     "test:storybook": "test-storybook",
-    "test:storybook:ci": "test-storybook --ci",
     "typecheck": "tsc --noEmit"
   },
+  "peerDependencies": {},
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -97,12 +96,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-react": "8.0.0",
-    "next": "^14.1.1",
+    "next": "^14.1.2",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-hook-form": "^7.50.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
@@ -126,19 +126,19 @@
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
+    "@types/react": "^18.2.63",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.344.0",
-    "playwright": "^1.42.0",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
-    "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook-addon-pseudo-states": "^2.2.1",
     "storybook-dark-mode": "^3.0.3",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "vite": "^5.1.5",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1",
     "zod": "^3.22.4"
   },
