--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,8 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: ./.github/actions/setup-node
         with:
           node-version: ${{ matrix.node_version }}
@@ -99,7 +101,11 @@ jobs:
       - name: Install package
         run: ni -D concurrently http-server wait-on
 
+      - name: Storybook build
+        run: nr -C packages/ui build:storybook
+
       - name: Storybook test
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           npx concurrently -k -s first -n "Storybook serve,Storybook test" \
           "npx http-server storybook-static --port 6006 --silent" \
