--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -60,7 +60,6 @@
     "test:storybook": "test-storybook",
     "typecheck": "tsc --noEmit"
   },
-  "peerDependencies": {},
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -127,9 +126,11 @@
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.63",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
+    "http-server": "^14.1.1",
     "lucide-react": "0.344.0",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
@@ -140,6 +141,7 @@
     "vite": "^5.1.5",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1",
+    "wait-on": "^7.2.0",
     "zod": "^3.22.4"
   },
   "size-limit": "65 KB"
