--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           npx concurrently -k -s first -n "Storybook serve,Storybook test" \
-          "npx http-server dist/storybook --port 6006 --silent" \
+          "npx http-server dist/storybook --port 6006" \
           "npx wait-on tcp:6006 && npx test-storybook"
 
   action-timeline:
