--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -58,6 +58,7 @@
     "storybook": "storybook dev -p 6006",
     "test": "vitest run",
     "test:storybook": "test-storybook",
+    "test:storybook:ci": "concurrently -k -s first -n \"Serve🔥,Test🧪\" -c \"magenta,blue\" \"nr build:storybook && serve dist/storybook -l 6006\" \"wait-on http://127.0.0.1:6006 && pnpm test:storybook\"",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -95,7 +96,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-react": "8.0.0",
-    "next": "^14.1.2",
+    "next": "^14.1.3",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
@@ -124,21 +125,23 @@
     "@storybook/theming": "^7.6.17",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.63",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.344.0",
+    "serve": "^14.2.1",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
     "storybook-addon-pseudo-states": "^2.2.1",
     "storybook-dark-mode": "^3.0.3",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.2",
     "vite": "^5.1.5",
-    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1",
+    "wait-on": "^7.2.0",
     "zod": "^3.22.4"
   },
   "size-limit": "65 KB"
