chore: fix sb issues and added storybook test for ci (#274)
* chore: fix sb issues and added storybook test for ci

* chore: build seperated from test in github action

* chore: fix storybook serve

* fix: storybook install process

* fix: storybook install process using pnpm

* chore: enable http-server log

* chore: package version updated

* chore: removed unsed package

* chore: package update

* chore: install package after storybook build in ci

* chore: added clearning before storybook build in CI

* fix: storybook test in ci env issue

* chore: package updated

* ci: playwrite install after post intall

* ci: removed storybook build directory clean

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,8 +93,16 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: Test
+      - name: Unit Test
         run: nr test
+
+      - name: Storybook build
+        run: nr -C packages/ui build:storybook
+
+      - name: Storybook test
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          pnpm -C packages/ui test:storybook:ci
 
   action-timeline:
     needs: [build, lint, pr, test, trivy_scan, triage]
