--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,12 +54,12 @@
   "scripts": {
     "postinstall": "pnpm exec playwright install",
     "build": "tsx esbuild.config.ts",
-    "build-storybook": "storybook build",
+    "build:storybook": "storybook build -o dist/storybook",
     "dev": "tsx esbuild.config.ts --watch",
     "storybook": "storybook dev -p 6006",
     "test": "vitest run",
     "test:storybook": "test-storybook",
-    "test:storybook:ci": "test-storybook --ci",
+    "test:storybook:ci": "concurrently -k -s first -n \"Serve🔥,Test🧪\" -c \"magenta,blue\" \"nr build:storybook && serve dist/storybook -l 6006\" \"wait-on http://127.0.0.1:6006 && pnpm test:storybook\"",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -97,12 +97,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-react": "8.0.0",
-    "next": "^14.1.1",
+    "next": "^14.1.3",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-hook-form": "^7.50.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
@@ -125,21 +126,24 @@
     "@storybook/theming": "^7.6.17",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.3.1",
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.344.0",
-    "playwright": "^1.42.0",
+    "playwright": "^1.42.1",
+    "serve": "^14.2.1",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
-    "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook-addon-pseudo-states": "^2.2.1",
     "storybook-dark-mode": "^3.0.3",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5",
     "vitest": "^1.3.1",
+    "wait-on": "^7.2.0",
     "zod": "^3.22.4"
   },
   "size-limit": "65 KB"
