chore: base e2e setup using playwright

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
         "davidanson.vscode-markdownlint",
         "eamodio.gitlens",
         "editorconfig.editorconfig",
-        "zixuanchen.vitest-explorer"
+        "zixuanchen.vitest-explorer",
+        "ms-playwright.playwright"
       ]
     }
   },
