--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,22 +51,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
-      - name: Build
+      - name: 👷 Build
         run: |
           nr -r ci:env-copy
           nr build
           nr -r ci:env-delete
           nr -r build:check
-
-  coverage:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
-
-      - name: Coverage
-        run: nr coverage
 
   lint:
     runs-on: ubuntu-latest
@@ -75,7 +65,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
-      - name: Lint
+      - name: 👕 Lint
         run: nr lint
 
   test:
@@ -93,13 +83,16 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: Unit Test
+      - name: 🧪 Unit Test
         run: nr test
 
-      - name: Storybook build
+      - name: 📶 Unit Test Coverage
+        run: nr coverage
+
+      - name: 📚 Storybook build
         run: nr -C packages/ui build:storybook
 
-      - name: Storybook test
+      - name: 🚨 Storybook test
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           pnpm -C packages/ui test:storybook:ci
