--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "davidanson.vscode-markdownlint",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
-    "zixuanchen.vitest-explorer"
+    "zixuanchen.vitest-explorer",
+    "ms-playwright.playwright"
   ]
 }
