--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,14 @@
     "npm": ">=8"
   },
   "scripts": {
-    "dev": "next dev --port=3001",
     "build": "next build",
+    "dev": "next dev --port=3001",
+    "e2e:test:show-report": "playwright show-report",
+    "e2e:test": "playwright test",
+    "e2e:test:ui": "nr e2e:test --ui",
+    "preview": "next build && next start --port=3001",
     "start": "next start",
-    "preview": "next build && next start",
+    "test": "nr e2e:test",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -37,11 +41,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
+    "std-env": "^3.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
