--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,10 +84,17 @@ jobs:
           node-version: ${{ matrix.node_version }}
 
       - name: 🧪 Unit Test
-        run: nr test
+        run: nr test:ci
 
-      - name: 📶 Unit Test Coverage
-        run: nr coverage
+      - name: 🌐 E2E app/web test
+        run: pnpm -C apps/web e2e:test
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: artifacts/e2e/reports
+          retention-days: 30
 
       - name: 📚 Storybook build
         run: nr -C packages/ui build:storybook
