--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,7 +10,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "vitest.config.js"
+    "*.d.ts",
+    "vitest.config.mts"
   ],
   "exclude": ["**/dist"]
 }
