--- a/packages/storage/tsconfig.json
+++ b/packages/storage/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "*.d.ts", "vitest.config.mts"]
+  "include": ["src/**/*.ts", "*.d.ts"]
 }
