fix: knip linting

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "prepare": "husky",
     "postinstall": "pnpm exec playwright install --with-deps",
     "all": "ni && nr deps:update && nr lint && nr build && nr test",
-    "build": "nr clean && turbo run build && nr -r build:check",
-    "clean": "nr -r clean",
+    "build": "nr clean && turbo run build && nr -C scripts build:check",
+    "clean": "nr -C scripts clean",
     "test:ci": "vitest run --coverage",
     "deps:update": "taze -r -w -i -f -l",
     "lint": "eslint . --fix && knip && nr -r typecheck && nr -C scripts automd",
