chore: admin module added

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -11,7 +11,6 @@
     "lib/**/*.ts",
     ".storybook/**/*.ts",
     "components/**/*.tsx",
-    "registry/**/*.ts",
-    "*.d.ts"
+    "registry/**/*.ts"
   ]
 }
