chore: admin module added

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@templ/web",
+  "name": "@templ/admin",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.15.4",
   "description": "UI",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/apps/web#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/apps/admin#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "apps/web"
+    "directory": "apps/admin"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
@@ -20,18 +20,18 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "next dev --port=3001",
+    "dev": "next dev --port=3003",
     "e2e:test:show-report": "playwright show-report ../../artifacts/e2e-report",
     "e2e:test": "playwright test",
     "e2e:test:ui": "nr e2e:test --ui",
-    "preview": "next build && next start --port=3001",
+    "preview": "next build && next start --port=3003",
     "start": "next start",
     "test": "nr e2e:test",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@templ/ui": "workspace:*",
+    "@tanstack/react-table": "^8.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "0.344.0",
@@ -39,17 +39,24 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@argos-ci/playwright": "^1.9.3",
+    "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.42.1",
     "@templ/tsconfig": "workspace:*",
+    "@templ/ui": "workspace:*",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "autoprefixer": "^10.4.18",
+    "consola": "^3.2.3",
+    "date-fns": "^3.3.1",
     "postcss": "^8.4.35",
+    "react-day-picker": "^8.10.0",
     "std-env": "^3.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
