fix: storybook test issue

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -127,6 +127,7 @@
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
+    "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
     "esbuild": "^0.20.2",
@@ -134,8 +135,6 @@
     "lucide-react": "0.358.0",
     "serve": "^14.2.1",
     "storybook": "^8.0.0",
-    "storybook-addon-performance": "^0.17.3",
-    "storybook-addon-pseudo-states": "^2.2.1",
     "storybook-dark-mode": "^4.0.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2",
